--- a/pcgrr/vignettes/faq.Rmd
+++ b/pcgrr/vignettes/faq.Rmd
@@ -11,7 +11,7 @@ _Answer: VCF variant genotype data (i.e. AD/DP) is something that you as a user 
 
 __2. Is it possible to utilize PCGR for analysis of multiple samples?__
 
-_Answer: As the name of the tool implies, PCGR was developed for the detailed analysis of individual tumor samples. However, if you take advantage of the different outputs from PCGR, it can also be utilized for analysis of multiple samples. First, make sure your input files are organized per sample (i.e. one VCF file per sample, one CNA file per sample), so that they can be fed directly to PCGR. Now, once all samples have been processed with PCGR, note that all the tab-separated output files (i.e. annotated SNVs, gene copy numbers) contain the sample identifier, which enable them to be aggregated and suitable for a downstream multi-sample analysis. Also note the multi-sheet Excel workbook, which contains numerous outputs from PCGR._
+_Answer: As the name of the tool implies, PCGR was developed for the detailed analysis of individual tumor samples. However, if you take advantage of the different outputs from PCGR, it can also be utilized for analysis of multiple samples. First, make sure your input files are organized per sample (i.e. one VCF file per sample, one CNA file per sample), so that they can be fed directly to PCGR. Now, once all samples have been processed with PCGR, note that all the tab-separated output files (i.e. annotated SNVs, gene copy numbers) contain the sample identifier, which enable them to be aggregated and suitable for a downstream multi-sample analysis. Also note the multi-sheet Excel workbook, which contains numerous outputs from PCGR, and can be processed to aggregate findings across samples._
 
 __3. I do not see the expected transcript-specific consequence for a particular variant. In what way is the primary variant consequence established?__
 
@@ -33,6 +33,10 @@ __7. Are there any plans to incorporate genomic biomarker evidence from__ [OncoK
 
 _Answer: No. PCGR relies upon publicly available open-source resources, and further that the PCGR data bundle can be distributed freely to the user community. It is our understanding that_ [OncoKB's terms of use](https://www.oncokb.org/terms) _do not fit well with this strategy._
 
-__8. Is it possible for the users to update the data bundle to get the most recent versions of all underlying data sources?__
+__8. I have RNA fusion data that I want to include in the report. Is this possible?__
+
+_Answer: This is currently not supported as input for PCGR, but is something we are actively pursuing. The focus will be on whether detected RNA fusion events are previously known, and whether these are known as biomarkers for diagnosis or treatment._
+
+__9. Is it possible for the users to update the data bundle to get the most recent versions of all underlying data sources?__
 
 _Answer: As of now, the data bundle is updated only with each release of PCGR. The data harmonization pipeline of knowledge databases in PCGR contain numerous and complex procedures, with several quality control and re-formatting steps, and and cannot be fully automated in its present form. The version of all databases and key software elements are outlined in each PCGR report._
