--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -48,7 +48,7 @@ pdiakumis <- user("pdiakumis")
 
 ## v2.0.0
 
-* Date: **2024-05-xx**
+* Date: **2024-06-xx**
 * Major data updates
   * ClinVar
   * NCI Thesaurus
@@ -92,6 +92,7 @@ pdiakumis <- user("pdiakumis")
   - `--preserved_info_tags` is now named `--retained_info_tags`
   - `--basic` is now named `--no_reporting`
   - `--target_size_mb` is now named `--effective_target_size_mb`
+- LOFTEE plugin in VEP removed as LOF-annotator (due to low level of maintenance, and outdated dependency requirements). For now, a very simplified LoF-annotation is used as a replacement, simply looking at CSQ types - this will be improved in future releases (considering potentially false positives near the transcript end)
 
 ##### Removed
 
