updated installation docs

--- a/pcgrr/vignettes/installation.Rmd
+++ b/pcgrr/vignettes/installation.Rmd
@@ -67,14 +67,14 @@ Here's an example scenario that will be used in the following sections
 
 **A)** Download and unpack the assembly-specific reference data bundle needed for PCGR:
 
-- [grch37 data bundle - 20240530](https://insilico.hpc.uio.no/pcgr/pcgr_ref_data.20240530.grch37.tgz) (approx 5.6Gb)
-- [grch38 data bundle - 20240530](https://insilico.hpc.uio.no/pcgr/pcgr_ref_data.20240530.grch38.tgz) (approx 5.6Gb)
+- [grch37 data bundle - 20240610](https://insilico.hpc.uio.no/pcgr/pcgr_ref_data.20240610.grch37.tgz) (approx 4.8Gb)
+- [grch38 data bundle - 20240610](https://insilico.hpc.uio.no/pcgr/pcgr_ref_data.20240610.grch38.tgz) (approx 4.8Gb)
 
 - Example:
 
 ```bash
 GENOME="grch38" # or "grch37"
-BUNDLE_VERSION="20240530"
+BUNDLE_VERSION="20240610"
 BUNDLE="pcgr_ref_data.${BUNDLE_VERSION}.${GENOME}.tgz"
 
 wget https://insilico.hpc.uio.no/pcgr/${BUNDLE}
@@ -87,10 +87,10 @@ gzip -dc ${BUNDLE} | tar xvf -
 
 ```bash
 GENOME="GRCh38" # or "GRCh37"
-VEP_VERSION="111"
+VEP_VERSION="112"
 CACHE="homo_sapiens_vep_${VEP_VERSION}_${GENOME}.tar.gz"
 
-wget https://ftp.ensembl.org/pub/release-111/variation/indexed_vep_cache/${CACHE}
+wget https://ftp.ensembl.org/pub/release-${VEP_VERSION}/variation/indexed_vep_cache/${CACHE}
 gzip -dc ${CACHE} | tar xvf -
 ```
 
